# agent-sql

./: .env  .gitignore  README.md  app.py  create_ecommerce_db.ipynb  pyproject.toml
api/: main.py
db/: ecommerce_sqlite.ipynb  northwind.db
streamlit/: app.py
